--- a/css/mscomGrid.css
+++ b/css/mscomGrid.css
@@ -277,7 +277,7 @@ BEGIN MEDIA QUERIES
 }
 
 @media screen and (min-width: 540px) {
-    .col-1-2, .col-1-4, .col-1-6 {
+    .col-1-4, .col-1-6 {
         width: 50%;
     }
 
@@ -311,6 +311,9 @@ BEGIN MEDIA QUERIES
 }
 
 @media screen and (min-width: 768px) {
+	.col-1-2 {
+		width: 50%;
+	}
     .col-1-4, .col-3-4 + .col-1-4 {
         width: 25%;
     }
