--- a/css/mscomGrid.css
+++ b/css/mscomGrid.css
@@ -49,9 +49,7 @@
     width: 90%;
     margin: 0 auto;
     max-width: 1600px;
-    padding: 0.3em 1% 0 1%;
-    padding: -webkit-calc(0.3em + 1.5vh) 1% 0 1%;
-    padding: calc(0.3em + 1.5vh) 1% 0 1%;
+    padding: 0 1% 0 1%;
 }
 
 .grid.full {
@@ -60,15 +58,9 @@
 }
 
 .row {
-    margin: 0.3em -1%;
-    margin: -webkit-calc(0.3em + 1.5vh) -1%;
-    margin: calc(0.3em + 1.5vh) -1%;
+    margin: 0 -1%;
     margin-bottom: 0;
 }
-
-    .row.no-padding {
-        padding: 0;
-    }
 
     .row:after, [class*='col-']:after {
         content: "";
@@ -87,9 +79,13 @@
     margin-top: 0;
 }
 
-    [class*='col-'] > .wrapper {
-        overflow: auto;
-    }
+[class*='col-'].fixed-col-margin {
+    padding: 0 3px;
+}
+
+[class*='col-'].no-col-margin  {
+    padding: 0;
+}
 
 .col-1-3.nobreak {
     width: 33.3333%;
@@ -108,11 +104,11 @@
 }
 
 .col-1-12 {
-    width: 25%;
+    width: 50%;
 }
 
 .col-2-12 {
-    width: 50%;
+    width: 100%;
 }
 
 .col-4-12 {
@@ -173,6 +169,10 @@ BEGIN MEDIA QUERIES
         width: 25%;
     }
 
+    .col-2-12 {
+        width: 50%;
+    }
+
     .col-2-4, .col-2-6, .col-4-8 {
         width: 100%;
     }
@@ -183,9 +183,9 @@ BEGIN MEDIA QUERIES
 }
 
 @media screen and (min-width: 768px) {
-	.col-1-2 {
-		width: 50%;
-	}
+    .col-1-2 {
+        width: 50%;
+    }
     .col-1-4, .col-3-4 + .col-1-4 {
         width: 25%;
     }
