--- a/css/mscomGrid.css
+++ b/css/mscomGrid.css
@@ -10,38 +10,38 @@
     display: none;
 }
 
-    .gridlines.outside {
-        position: fixed;
-        width: 100%;
-        z-index: 1;
-    }
+.gridlines.outside {
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+}
 
-    .gridlines.inside {
-        position: relative;
-        width: 90%;
-        margin: 0 auto;
-        max-width: 1600px;
-        padding: 0 1%;
-    }
+.gridlines.inside {
+    position: relative;
+    width: 90%;
+    margin: 0 auto;
+    max-width: 1600px;
+    padding: 0 1%;
+}
 
-        .gridlines.full.inside {
-        width: 100%;
-        max-width: none;
-    }
+.gridlines.full.inside {
+    width: 100%;
+    max-width: none;
+}
 
-    .gridlines .bar {
-        position: relative;
-        float: left;
-        width: 4.375%;
-        height: 100vh;
-        margin-right: 2%;
-        bottom: 0;
-        background-color: rgba(255, 0, 0, 0.25);
-    }
+.gridlines .bar {
+    position: relative;
+    float: left;
+    width: 4.375%;
+    height: 100vh;
+    margin-right: 2%;
+    bottom: 0;
+    background-color: rgba(255, 0, 0, 0.25);
+}
 
-        .gridlines .bar:last-of-type {
-            margin-right: 0;
-        }
+.gridlines .bar:last-of-type {
+    margin-right: 0;
+}
 
 .grid {
     display: block;
@@ -60,31 +60,37 @@
 .row {
     margin: 0 -1%;
     margin-bottom: 0;
-    padding: 1em 0;
-    padding: -webkit-calc(1em + 0.5vh) 0;
-    padding: calc(1em + 0.5vh) 0;
 }
 
-    .row:after, [class*='col-']:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+.row:after, [class*='col-']:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
 [class*='col-'] {
     float: left;
-    padding: 0 1%;
     width: 100%;
     position: relative;
     margin: 0;
+    padding: 1em 1%;
+    padding: -webkit-calc(1em + 0.5vh) 1%;
+    padding: calc(1em + 0.5vh) 1%;
 }
 
-[class*='col-'].fixed-col-margin {
-    padding: 0 3px;
+[class*='col-'].fixed-hcol-margin {
+    padding-left: 3px;
+    padding-right: 3px;
 }
 
-[class*='col-'].no-col-margin  {
-    padding: 0;
+[class*='col-'].no-hcol-margin  {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+[class*='col-'].no-vcol-margin  {
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .col-1-3.nobreak {
@@ -222,9 +228,9 @@ BEGIN MEDIA QUERIES
         width: 100%;
     }
 
-        .col-4-6 ~ .col-1-6 {
-            width: 50%;
-        }
+    .col-4-6 ~ .col-1-6 {
+        width: 50%;
+    }
 
     .col-1-8 {
         width: 25%;
@@ -242,9 +248,9 @@ BEGIN MEDIA QUERIES
         width: 100%;
     }
 
-        .col-6-8 ~ .col-1-8 {
-            width: 50%;
-        }
+    .col-6-8 ~ .col-1-8 {
+        width: 50%;
+    }
 
     .col-1-16 {
         width: 12.5%;
