--- a/css/demo.css
+++ b/css/demo.css
@@ -1,16 +1,60 @@
 /*CSS that is just for demo site purposes*/
 .mediaQTable {
-    font-size: 1.2em;
-    overflow: auto;
-    border: 1px solid #000;
+	font-size: 1.2em;
+	overflow: auto;
+	border: 1px solid #000;
 }
 
 .mediaQTable thead tr th {
-    font-weight: bold;
-    background-color: #eee;
+	font-weight: bold;
+	background-color: #eee;
 }
 .mediaQTable td {
-    text-align: center;
-    padding: 0 5vw;
-    border: 1px solid #000;
+	text-align: center;
+	padding: 0 5vw;
+	border: 1px solid #000;
+}
+
+.colNum {
+	font-size: 1.5em;
+	color: rgba(255, 255, 255, 0.8);
+	padding-right: 1rem;
+	text-align: right;
+}
+/*Clickable gridline styles*/
+.gridlines {
+	display: none;
+}
+
+.gridlines.outside {
+	position: fixed;
+	width: 100%;
+	z-index: 1;
+}
+
+.gridlines.inside {
+	position: relative;
+	width: 90%;
+	margin: 0 auto;
+	max-width: 1600px;
+	padding: 0 1%;
+}
+
+.gridlines.full.inside {
+	width: 100%;
+	max-width: none;
+}
+
+.gridlines .bar {
+	position: relative;
+	float: left;
+	width: 4.375%;
+	height: 100vh;
+	margin-right: 2%;
+	bottom: 0;
+	background-color: rgba(255, 0, 0, 0.25);
+}
+
+.gridlines .bar:last-of-type {
+	margin-right: 0;
 }
