--- a/css/mscomalize.css
+++ b/css/mscomalize.css
@@ -15,6 +15,13 @@
     font-style: normal;
 }
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
     font-family: wf_segoe-ui_light;
 }
