--- a/css/demo.css
+++ b/css/demo.css
@@ -1,60 +1,107 @@
 /*CSS that is just for demo site purposes*/
 .mediaQTable {
-	font-size: 1.2em;
-	overflow: auto;
-	border: 1px solid #000;
-}
+  font-size: 1.2em;
+  overflow: auto;
+  border: 1px solid #000; }
+  .mediaQTable thead tr th {
+    font-weight: bold;
+    background-color: #eee; }
+  .mediaQTable td {
+    text-align: center;
+    padding: 0 5vw;
+    border: 1px solid #000; }
 
-.mediaQTable thead tr th {
-	font-weight: bold;
-	background-color: #eee;
-}
-.mediaQTable td {
-	text-align: center;
-	padding: 0 5vw;
-	border: 1px solid #000;
-}
+input[type="button"] {
+  border: 0;
+  padding: 1rem;
+  background-color: #F65314; }
+
+input[type="button"]:hover, input[type="button"]:focus {
+  background-color: #7CBB00; }
 
 .colNum {
-	font-size: 1.5em;
-	color: rgba(255, 255, 255, 0.8);
-	padding-right: 1rem;
-	text-align: right;
-}
+  font-size: 1.5em;
+  color: rgba(255, 255, 255, 0.8);
+  padding-right: 1rem;
+  text-align: right; }
+
 /*Clickable gridline styles*/
 .gridlines {
-	display: none;
-}
+  display: none; }
+  .gridlines.outside {
+    position: fixed;
+    top: 4em;
+    width: 100%;
+    z-index: 1; }
+  .gridlines.inside {
+    position: relative;
+    width: 90%;
+    margin: 0 auto;
+    max-width: 1600px;
+    padding: 0 1%; }
+  .gridlines.full.inside {
+    width: 100%;
+    max-width: none; }
+  .gridlines .bar {
+    position: relative;
+    float: left;
+    width: 4.375%;
+    height: 100vh;
+    margin-right: 2%;
+    bottom: 0;
+    background-color: rgba(255, 0, 0, 0.25); }
+  .gridlines .bar:last-of-type {
+    margin-right: 0; }
 
-.gridlines.outside {
-	position: fixed;
-	width: 100%;
-	z-index: 1;
-}
+.row-background-photo {
+  background-image: url(http://static.pexels.com/wp-content/uploads/2014/09/light-bulb-lights-2830-824x550.jpg);
+  background-size: cover; }
+  .row-background-photo p {
+    color: #FFF; }
 
-.gridlines.inside {
-	position: relative;
-	width: 90%;
-	margin: 0 auto;
-	max-width: 1600px;
-	padding: 0 1%;
-}
+.background-photo-wrapper {
+  background-image: url(http://static.pexels.com/wp-content/uploads/2014/09/fence-ivy-overgrown-2810-829x550.jpg);
+  background-size: cover; }
 
-.gridlines.full.inside {
-	width: 100%;
-	max-width: none;
-}
+.background-color-wrapper {
+  background-color: #00A1F1; }
 
-.gridlines .bar {
-	position: relative;
-	float: left;
-	width: 4.375%;
-	height: 100vh;
-	margin-right: 2%;
-	bottom: 0;
-	background-color: rgba(255, 0, 0, 0.25);
-}
+.grid h1, .grid h2, .grid h3, .grid h4, .grid h5, .grid h6 {
+  margin: 0; }
 
-.gridlines .bar:last-of-type {
-	margin-right: 0;
-}
+.list-of-links {
+  list-style: none;
+  padding-left: 0; }
+  .list-of-links li {
+    color: #1570a6; }
+
+.discover-links li {
+  margin-bottom: 1em; }
+
+.caption-text {
+  font-size: 0.8em; }
+
+.social-wrapper {
+  background-color: #1570A6; }
+  .social-wrapper h2, .social-wrapper .list-of-links li {
+    color: #FFF; }
+
+.demo-box {
+  width: 100%;
+  height: 8em;
+  margin: 1.5em 0;
+  background-color: rgba(0, 0, 0, 0.5); }
+
+.hp-footer {
+  background-color: #eee; }
+
+@media screen and (min-width: 540px) {
+  .discover-links li, .follow-links li {
+    display: inline-block;
+    margin-right: 1.5em; } }
+@media screen and (min-width: 768px) {
+  .discover-links li, .follow-links li {
+    display: block;
+    margin-right: 0; } }
+
+/*# sourceMappingURL=demo.css.map */
