--- a/css/demo.scss
+++ b/css/demo.scss
@@ -31,6 +31,11 @@ input[type="button"]:hover, input[type="button"]:focus {
 	padding-right: 1rem;
 	text-align: right;
 }
+
+.fixed .colNum {
+	width: 100%;
+}
+
 /*Clickable gridline styles*/
 .gridlines {
 	display: none;
