--- a/css/mscomGrid.css
+++ b/css/mscomGrid.css
@@ -3,7 +3,6 @@
     #IMPORTS
     \*------------------------------------*/
 /*! normalize.css v1.1.3 | MIT License | git.io/normalize */
-/*! normalize.css v1.1.3 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -596,10 +595,10 @@ img {
   text-align: center; }
 
 .text-left, .tal {
-  text-align: center; }
+  text-align: left; }
 
 .text-right, .tar {
-  text-align: center; }
+  text-align: right; }
 
 .justify {
   text-align: justify; }
@@ -673,6 +672,9 @@ p.small {
   .grid.full {
     width: 100%;
     max-width: none; }
+  .grid.fixed .row > [class*='col-'] {
+    padding-left: 2px;
+    padding-right: 2px; }
   .grid .row {
     margin: 0 -1%;
     margin: 0 -1vw;
@@ -692,65 +694,38 @@ p.small {
   padding: 1em 1%;
   padding: -webkit-calc(1em + 0.5vh) 1vw;
   padding: calc(1em + 0.5vh) 1vw; }
-  [class*='col-'].fixed-hcol-margin {
-    padding-left: 3px;
-    padding-right: 3px; }
 
-.col-1-3.nobreak {
+.col-1-3.nb {
   width: 33.3333%; }
 
-.col-2-3.nobreak {
+.col-2-3.nb {
   width: 66.6666%; }
 
-.col-1-2.nobreak, .col-1-8 {
+.col-1-2.nb, .col-2-4.nb, .col-1-8, .col-1-12, .col-1-16 {
   width: 50%; }
 
-.col-1-4.nobreak {
+.col-1-4.nb {
   width: 25%; }
 
-.col-2-4.nobreak {
-  width: 50%; }
-
-.col-3-4.nobreak {
+.col-3-4.nb {
   width: 75%; }
 
-.col-1-5.nobreak {
+.col-1-5.nb {
   width: 20%; }
 
-.col-1-6.nobreak {
+.col-1-6.nb {
   width: 16.66%; }
 
-.col-1-8.nobreak {
+.col-1-8.nb {
   width: 12.5%; }
 
-.col-1-12.nobreak {
+.col-1-12.nb {
   width: 8.33%; }
 
-.col-1-16.nobreak {
+.col-1-16.nb {
   width: 6.25%; }
 
-.col-2-8 {
-  width: 100%; }
-
-.col-1-12 {
-  width: 50%; }
-
-.col-2-12 {
-  width: 100%; }
-
-.col-4-12 {
-  width: 100%; }
-
-.col-1-16 {
-  width: 50%; }
-
-.col-2-16 {
-  width: 100%; }
-
-.col-4-16 {
-  width: 100%; }
-
-.col-8-16 {
+.col-2-8, .col-2-12, .col-4-12, .col-2-16, .col-4-16, .col-8-16 {
   width: 100%; }
 
 /*******************
@@ -763,37 +738,25 @@ BEGIN MEDIA QUERIES
   .col-2-16 {
     width: 50%; } }
 @media screen and (min-width: 540px) {
-  .col-1-4, .col-1-6 {
+  .col-1-4, .col-1-6, .col-1-8, .col-2-12 {
     width: 50%; }
 
   .col-1-3 {
     width: 33.33%; }
 
-  .col-3-6 + .col-1-6 {
-    width: 100%; }
-
   .col-2-3 {
     width: 66.66%; }
-
-  .col-1-8 {
-    width: 50%; }
 
   .col-1-12 {
     width: 25%; }
 
-  .col-2-12 {
-    width: 50%; }
-
-  .col-2-4, .col-2-6, .col-4-8 {
-    width: 100%; }
-
-  .col-3-4 + .col-1-4, .preceding-col-1-4 {
+  .col-3-6 + .col-1-6, .col-2-4, .col-2-6, .col-4-8, .col-3-4 + .col-1-4, .preceding-col-1-4 {
     width: 100%; } }
 @media screen and (min-width: 768px) {
-  .col-1-2 {
+  .col-1-2, .col-2-4, .col-4-6 ~ .col-1-6, .preceding-col-1-6, .col-2-8, .col-6-8 ~ .col-1-8, .preceding-col-1-8, .col-4-16 {
     width: 50%; }
 
-  .col-1-4, .col-3-4 + .col-1-4, .preceding-col-1-4 {
+  .col-1-4, .col-3-4 + .col-1-4, .preceding-col-1-4, .col-1-8, .col-2-16 {
     width: 25%; }
 
   .col-1-5 {
@@ -808,113 +771,48 @@ BEGIN MEDIA QUERIES
   .col-4-5 {
     width: 80%; }
 
-  .col-1-6 {
+  .col-1-6, .col-3-6 + .col-1-6 {
     width: 33.33%; }
-
-  .col-3-6 + .col-1-6 {
-    width: 33.33%; }
-
-  .col-2-4 {
-    width: 50%; }
 
   .col-3-4 {
     width: 75%; }
 
-  .col-4-4 {
+  .col-4-4, .col-3-6, .col-4-6, .col-4-6 + .col-2-6, .preceding-col-2-6, .col-4-8,
+  .col-6-8, .col-6-8 + .col-2-8, .preceding-col-2-8, .col-8-16 {
     width: 100%; }
 
   .col-2-6 {
     width: 66.66%; }
 
-  .col-3-6 {
-    width: 100%; }
-
-  .col-4-6, .col-4-6 + .col-2-6, .preceding-col-2-6 {
-    width: 100%; }
-
-  .col-4-6 ~ .col-1-6, .preceding-col-1-6 {
-    width: 50%; }
-
-  .col-1-8 {
-    width: 25%; }
-
-  .col-2-8 {
-    width: 50%; }
-
-  .col-4-8 {
-    width: 100%; }
-
-  .col-6-8, .col-6-8 + .col-2-8, .preceding-col-2-8 {
-    width: 100%; }
-
-  .col-6-8 ~ .col-1-8, .preceding-col-1-8 {
-    width: 50%; }
-
   .col-1-16 {
-    width: 12.5%; }
-
-  .col-2-16 {
-    width: 25%; }
-
-  .col-4-16 {
-    width: 50%; }
-
-  .col-8-16 {
-    width: 100%; } }
+    width: 12.5%; } }
 @media screen and (min-width: 992px) {
-  .col-4-6 + .col-2-6, .preceding-col-2-6 {
+  .col-4-6 + .col-2-6, .preceding-col-2-6, .col-2-6, .col-4-12 {
     width: 33.33%; }
 
-  .col-4-6 ~ .col-1-6, .preceding-col-1-6 {
+  .col-4-6 ~ .col-1-6, .preceding-col-1-6, .col-1-6, .col-3-6 + .col-1-6, .col-2-12 {
     width: 16.66%; }
 
-  .col-6-8 + .col-2-8, .preceding-col-2-8 {
+  .col-6-8 + .col-2-8, .preceding-col-2-8, .col-2-8, .col-2-16 {
     width: 25%; }
 
-  .col-6-8 ~ .col-1-8, .preceding-col-1-8 {
+  .col-6-8 ~ .col-1-8, .preceding-col-1-8, .col-1-8, .col-1-16 {
     width: 12.5%; }
 
-  .col-1-6 {
-    width: 16.66%; }
-
-  .col-3-6 + .col-1-6 {
-    width: 16.66%; }
-
-  .col-2-6 {
-    width: 33.33%; }
-
-  .col-3-6 {
+  .col-3-6, .col-4-8, .col-4-16 {
     width: 50%; }
 
   .col-4-6 {
     width: 66.66%; }
 
-  .col-6-6 {
+  .col-6-6, .col-8-16 {
     width: 100%; }
-
-  .col-1-8, .col-1-16 {
-    width: 12.5%; }
-
-  .col-2-8, .col-2-16 {
-    width: 25%; }
-
-  .col-4-8, .col-4-16 {
-    width: 50%; }
 
   .col-6-8 {
     width: 75%; }
 
-  .col-8-16 {
-    width: 100%; }
-
   .col-1-12 {
-    width: 8.33%; }
-
-  .col-2-12 {
-    width: 16.66%; }
-
-  .col-4-12 {
-    width: 33.33%; } }
+    width: 8.33%; } }
 @media screen and (min-width: 1400px) {
   .col-1-16 {
     width: 6.25%; }
@@ -930,8 +828,8 @@ BEGIN MEDIA QUERIES
 /*Reducing padding to a reasonable size for "extremely" large displays*/
 @media screen and (min-width: 2000px) {
   [class*='col-'] {
-    padding: 1em 1%;
-    padding: -webkit-calc(1em + 0.5vh) 1%;
-    padding: calc(1em + 0.5vh) 1%; } }
+    padding: 1em 0.5%;
+    padding: -webkit-calc(1em + 0.5vh) 0.5vw;
+    padding: calc(1em + 0.5vh) 0.5vw; } }
 
 /*# sourceMappingURL=mscomGrid.css.map */
