--- a/css/mscomalize.css
+++ b/css/mscomalize.css
@@ -3,7 +3,6 @@
     #IMPORTS
     \*------------------------------------*/
 /*! normalize.css v1.1.3 | MIT License | git.io/normalize */
-/*! normalize.css v1.1.3 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -596,10 +595,10 @@ img {
   text-align: center; }
 
 .text-left, .tal {
-  text-align: center; }
+  text-align: left; }
 
 .text-right, .tar {
-  text-align: center; }
+  text-align: right; }
 
 .justify {
   text-align: justify; }
