--- a/css/mscomalize.scss
+++ b/css/mscomalize.scss
@@ -3,8 +3,6 @@
 /*------------------------------------*\
     #IMPORTS
     \*------------------------------------*/
-
-    /*! normalize.css v1.1.3 | MIT License | git.io/normalize */
     @import 'normalize';
 
 
@@ -218,11 +216,11 @@ img {
     }
 
     .text-left, .tal {
-        text-align: center;
+        text-align: left;
     }
 
     .text-right, .tar {
-        text-align: center;
+        text-align: right;
     }
 
     .justify {
